--- a/UntStudio.Server/Views/Admins/Index.cshtml
+++ b/UntStudio.Server/Views/Admins/Index.cshtml
@@ -1,2 +1,1 @@
-﻿<h1>Hello, please choose what are you looking for!</h1>
-<div>@Html.ActionLink("Admin Menu", "Menu")</div>
+﻿<div>@Html.ActionLink("Admin Menu", "Menu")</div>
